--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html {
   height: 100%;
   background-color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 
@@ -50,7 +50,6 @@ body, html {
   background-color: rgba(244,160,0,0.95);
   /* background-color: grey; */
   padding: 0px;
-  font-family: 'Roboto Condensed', sans-serif;
 }
 
 #nav-bar #name {
@@ -78,7 +77,7 @@ body, html {
 }
 
 #inspire {
-  font-size: 1.2em;
+  color: black;
 }
 
 .recommendation, .contact-info {
@@ -252,11 +251,10 @@ body, html {
 }
 
 .icons img {
-  width: 80px;
-  height: 80px;
-  border: 2px solid;
+  width: 60px;
+  height: 60px;
+  border: 1px solid;
   border-radius: 50%;
-  border-color: #db4437;
   padding: 2px;
 }
 
@@ -265,7 +263,7 @@ body, html {
 }
 
 .icons img:hover {
-  background-color: #0f9d58;
+  background-color: black;
 }
 
 .mm-flag img {
@@ -299,5 +297,3 @@ body, html {
   font-size: 0.7em;
   margin-bottom: 15px;
 }
-
-
